--- a/style/styles.css
+++ b/style/styles.css
@@ -340,7 +340,7 @@ gap: 20px;
     display: block;
     margin: 40px auto; /* Увеличили отступы */
     padding: 18px 40px; /* Увеличили размер кнопки */
-    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    background: linear-gradient(135deg, #7a4d0ec4 0%, #964b2e 100%);
     color: white;
     border: none;
     border-radius: 30px; /* Сделали более скругленной */
